--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="corner_radius">0dp</dimen>
+    <dimen name="layer_padding">3dp</dimen>
 </resources>
