--- a/app/src/main/res/layout/activity_login_sucesso.xml
+++ b/app/src/main/res/layout/activity_login_sucesso.xml
@@ -12,30 +12,30 @@
         android:background="#000000"
         android:alpha="0.4"
         android:layout_alignParentTop="true" />
-
     <TextView
-        android:id="@id/txt_sucesso_nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="258dp"
-        android:gravity="center_horizontal"
-        android:text="@string/txt_sucesso_nome"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ffffff"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Bem-vindo, Alberto Sales"
+        android:gravity="center_horizontal"
+        android:id="@+id/txt_sucesso_nome"
+        android:layout_marginTop="258dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/txt_sucesso_email"
+        android:text="albertosales@mail.com"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:gravity="center_horizontal"
         android:id="@+id/txt_sucesso_email"
         android:layout_below="@+id/txt_sucesso_nome"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <com.pkmmte.view.CircularImageView
@@ -54,7 +54,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/logout"
+        android:text="Log Out"
         android:id="@+id/btn_logout"
         android:textColor="#ffffff"
         android:layout_marginRight="20dp"
